app.css
@tailwind base;

@tailwind components;

:root {
  scroll-behavior: smooth;
  --ratio: 1.4;
  --measure: 55ch;
  --s-4: calc(var(--s-3) / var(--ratio));
  --s-3: calc(var(--s-2) / var(--ratio));
  --s-2: calc(var(--s-1) / var(--ratio));
  --s-1: calc(var(--s0) / var(--ratio));
  --s0: 1rem;
  --s1: calc(var(--s0) * var(--ratio));
  --s2: calc(var(--s1) * var(--ratio));
  --s3: calc(var(--s2) * var(--ratio));
  --s4: calc(var(--s3) * var(--ratio));
  --s5: calc(var(--s4) * var(--ratio));
  --s6: calc(var(--s5) * var(--ratio));
  --s7: calc(var(--s6) * var(--ratio));
  --s8: calc(var(--s7) * var(--ratio));
  font-size: calc(0.15vw + 1em);
}

.text-base {
  font-size: var(--s0);
}
.text-sm {
  font-size: var(--s-1);
}

.p\:0 {
  padding: var(--s0);
}

/**************
 * typography *
 **************/

/* ibm-plex-sans-regular - latin */
@font-face {
  font-family: "IBM Plex Sans";
  font-style: normal;
  font-weight: 400;
  src: local("IBM Plex Sans"), local("IBMPlexSans"),
    url("/public/fonts/ibm-plex-sans-v7-latin-regular.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-sans-v7-latin-regular.woff") format("woff");
  font-display: swap;
}

/* ibm-plex-sans-italic - latin */
@font-face {
  font-family: "IBM Plex Sans";
  font-style: italic;
  font-weight: 400;
  src: local("IBM Plex Sans Italic"), local("IBMPlexSans-Italic"),
    url("/public/fonts/ibm-plex-sans-v7-latin-italic.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-sans-v7-latin-italic.woff") format("woff");
  font-display: swap;
}

/* ibm-plex-sans-600 - latin */
@font-face {
  font-family: "IBM Plex Sans";
  font-style: normal;
  font-weight: 600;
  src: local("IBM Plex Sans Bold"), local("IBMPlexSans-Bold"),
    url("/public/fonts/ibm-plex-sans-v7-latin-600.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-sans-v7-latin-600.woff") format("woff");
  font-display: swap;
}

/* ibm-plex-sans-700 - latin */
@font-face {
  font-family: "IBM Plex Sans";
  font-style: normal;
  font-weight: 700;
  src: local("IBM Plex Sans Bold"), local("IBMPlexSans-Bold"),
    url("/public/fonts/ibm-plex-sans-v7-latin-700.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-sans-v7-latin-700.woff") format("woff");
  font-display: swap;
}

/* ibm-plex-mono-regular - latin */
@font-face {
  font-family: "IBM Plex Mono";
  font-style: normal;
  font-weight: 400;
  src: local("IBM Plex Mono"), local("IBMPlexMono"),
    url("/public/fonts/ibm-plex-mono-v5-latin-regular.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-mono-v5-latin-regular.woff") format("woff");
  font-display: swap;
}
/* ibm-plex-mono-600 - latin */
@font-face {
  font-family: "IBM Plex Mono";
  font-style: normal;
  font-weight: 600;
  src: local("IBM Plex Mono Bold"), local("IBMPlexMono-Bold"),
    url("/public/fonts/ibm-plex-mono-v5-latin-600.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-mono-v5-latin-600.woff") format("woff");
  font-display: swap;
}
/* ibm-plex-mono-700 - latin */
@font-face {
  font-family: "IBM Plex Mono";
  font-style: normal;
  font-weight: 700;
  src: local("IBM Plex Mono Bold"), local("IBMPlexMono-Bold"),
    url("/public/fonts/ibm-plex-mono-v5-latin-700.woff2") format("woff2"),
    url("/public/fonts/ibm-plex-mono-v5-latin-700.woff") format("woff");
  font-display: swap;
}

/* roboto-900 - latin */
@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 900;
  src: local("Roboto Black"), local("Roboto-Black"),
    url("/public/fonts/roboto-v20-latin-900.woff2") format("woff2"),
    url("/public/fonts/roboto-v20-latin-900.woff") format("woff");
  font-display: swap;
}

body {
  font-family: "IBM Plex Sans", sans-serif;
}
h2 {
  font-family: "Roboto", monospace;
}
h1 {
  font-family: "Roboto", sans-serif;
}
h1 {
  font-size: var(--s5);
  @apply tracking-tight;
}
p {
  @apply leading-relaxed;
}

h2 {
  font-size: var(--s2);
  font-weight: 600;
}
h3 {
  font-size: var(--s1);
  @apply font-bold;
}

a {
  text-decoration: underline;
}
a:hover {
  text-decoration: none;
}

b {
  font-weight: 600;
}

header {
  min-height: calc(100vh - 3vmin);
  max-width: calc(var(--measure) * 1.3);
  @apply flex flex-col justify-center;
  padding: var(--s0);
}
footer {
  font-size: var(--s-1);
}

article {
  max-width: var(--measure);
}

/**************
 * navigation *
 **************/

nav {
  @apply flex flex-col flex-wrap items-start;
}

nav a:not(#contact) {
  padding: var(--s-2) var(--s-1);
  margin-bottom: var(--s0);
}
@media (min-width: 640px) {
  nav {
    @apply flex-row;
    margin-bottom: 0;
  }
  nav a:not(#contact) {
    padding: var(--s-2) var(--s1);
    margin-bottom: var(--s0);
  }
  #contact {
    margin-left: var(--s1);
  }
}
nav a {
  @apply underline;
  font-weight: 600;
}

/*********************************
 * contact link mailto animation *
 *********************************/

#contact ul {
  position: relative;
  transform-style: preserve-3d;
  overflow: hidden;
}
#contact ul li {
  padding: var(--s-2) var(--s1);
  transition: transform 200ms cubic-bezier(0, 0.65, 0.7, 0.9), opacity 150ms;
}
#contact ul li:nth-child(2) {
  padding: var(--s-2) 0;
  transform: rotateX(-90deg) translateZ(20px);
  opacity: 0;
  position: absolute;
  top: 0;
  @apply bg-white text-black;
}
#contact ul:hover li:nth-child(1) {
  transform: rotateX(90deg) translateZ(20px);
  position: absolute;
  opacity: 0;
}
#contact ul:hover li:nth-child(2) {
  transform: rotateX(0deg) translateZ(20px);
  opacity: 1;
  position: relative;
}

/***********
 * content *
 ***********/

/* Stack elements in sections articles
 * ref: https://every-layout.dev/layouts/stack */
.stack > * + * {
  margin-top: 1rem;
}
article > * + * {
  margin-top: var(--s-1);
}
.stack\:3 > * + * {
  margin-top: var(--s3);
}
.stack\:5 > * + * {
  margin-top: var(--s5);
}

/* center elements in sections articles
 * ref: https://every-layout.dev/layouts/center */
.center {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--measure);
  display: flex;
  flex-direction: column;
  align-items: center;
}
.center\:3\/2 {
  box-sizing: content-box;
  margin-left: auto;
  margin-right: auto;
  max-width: calc(var(--measure) * 1.5);
}

/* clusters, used for skill tags
 * ref: https://absolutely.every-layout.dev/layouts/cluster */
.cluster {
  --space: var(--s-2);
  overflow: hidden;
}
.cluster > * {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: baseline;
  /* negative margin on the wrapper to make cluster elements "stick" to their container */
  margin: calc(var(--space) / 2 * -1);
}
.cluster > * > * {
  margin: calc(var(--space) / 2);
}

/* cover: one vertically centered element with another element sitting at the top
 * ref: https://absolutely.every-layout.dev/layouts/cover */
.cover {
  display: flex;
  flex-direction: column;
  min-height: 97vh;
  padding: 1rem;
}

.cover > * {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.cover > :first-child:not(.cover--centered) {
  margin-top: 0;
}

.cover > :last-child:not(.cover--centered) {
  margin-bottom: 0;
}

.cover > .cover--centered {
  margin-top: auto;
  margin-bottom: auto;
}

section {
  padding-top: var(--s8);
  padding-bottom: var(--s8);
  padding-left: var(--s1);
  padding-right: var(--s1);
}
section:last-child {
  min-height: 100vh;
  padding-bottom: var(--s4);
}
/* angled top border
 * ref: https://developer.microsoft.com/en-us/microsoft-edge/testdrive/demos/variable-fonts/ */
section {
  position: relative;
}
section::before {
  position: absolute;
  display: block;
  content: "";
  left: 0;
  top: calc(-8vmin + 1px);
  border-bottom: 8vmin solid #050505;
  border-left: 100vw solid transparent;
}
section:nth-child(2)::before {
  border-bottom-color: #fafafa;
}

/* two columns when space allows it */
.skills {
  display: flex;
  flex-wrap: wrap;
}
.skills > * {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: calc(
    var(--measure) / 2 - var(--s0)
  ); /* remove the outer margins from the computation */
  margin: calc(var(--s0) / 2);
}

.taglist {
  font-family: "IBM Plex Mono", monospace;
}

.taglist li {
  font-size: var(--s-1);
}

section:nth-child(2) article:nth-child(even) {
  margin-left: auto;
}

#contact-cta {
  font-family: "IBM Plex Sans", sans-serif;
  @apply tracking-wider;
  transition: color 300ms, border-color 300ms;
  display: inline-block;
  padding: var(--s2);
  text-decoration: none;
}

@tailwind utilities;

